--- a/src/app/shared/library-card/library-card.component.html
+++ b/src/app/shared/library-card/library-card.component.html
@@ -13,3 +13,4 @@
         </div>
     </div>
 </ng-container>
+<!-- TODO: IDEA: Turn this into a tag badge (rounded) with actionables on phone screen sizes-->
