Implemented dark mode

--- a/src/app/manga-reader/manga-reader.component.html
+++ b/src/app/manga-reader/manga-reader.component.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <div *ngIf="splitForm" class="col mt-4">
-                    <h4>Spliting<span class="phone-hidden"> Options</span></h4>
+                    <h4>Splitting<span class="phone-hidden"> Options</span></h4>
                     <form [formGroup]="splitForm">
                         <div class="btn-group btn-group-toggle" ngbRadioGroup name="radioBasic" formControlName="pageSplitOption">
                             <label ngbButtonLabel class="btn-primary">
