--- a/src/app/nav-header/nav-header.component.scss
+++ b/src/app/nav-header/nav-header.component.scss
@@ -1,6 +1,13 @@
 @import '~bootstrap/scss/mixins/_breakpoints.scss';
 
 $primary-color: white;
+$bg-color: #343a40;
+
+.navbar {
+    background-color: $bg-color;
+}
+
+
 
 .focus-visible:focus {
     visibility: visible;
