--- a/src/app/nav-header/nav-header.component.html
+++ b/src/app/nav-header/nav-header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" *ngIf="navService?.navbarVisible$ | async">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top" *ngIf="navService?.navbarVisible$ | async">
     <div class="container-fluid">
       <a class="sr-only sr-only-focusable focus-visible" href="javascript:void(0);" (click)="moveFocus()">Skip to main content</a>
       <a class="navbar-brand" routerLink="/" routerLinkActive="active"><i class="fa fa-home" aria-hidden="true"></i><span class="phone-hidden"> Kavita</span></a>
@@ -52,6 +52,13 @@
           </div>
         </div>
       </ul>
+
+      <!-- <div class="back-to-top">
+        <button class="btn btn-icon" (click)="navService?.toggleDarkMode()">
+          <i class="fa {{(navService?.darkMode$ | async) ? 'fa-moon' : 'fa-sun'}}" style="color: white" aria-hidden="true"></i>
+          <span class="sr-only">Dark mode Toggle. Current value {{(navService?.darkMode$ | async) ? 'On' : 'Off'}}</span>
+        </button>
+      </div> -->
       
       <div class="back-to-top">
         <button class="btn btn-icon scroll-to-top" (click)="scrollToTop()" *ngIf="backToTopNeeded">
