--- a/src/app/series-detail/series-detail.component.scss
+++ b/src/app/series-detail/series-detail.component.scss
@@ -10,7 +10,10 @@
     width: 100%;
 }
 
-
+.rating-star {
+  margin-top: 2px;
+  font-size: 1.5rem;
+}
 
 // Including breakpoint has issue with resovling variable, so copying gridpoints here
 @include media-breakpoint-down(xs, (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)) {
