--- a/src/app/shared/card-item/card-item.component.scss
+++ b/src/app/shared/card-item/card-item.component.scss
@@ -18,6 +18,17 @@ $image-width: 160px;
     right: 0px;
 }
 
+::ng-deep .bg-dark {
+    .error-banner, .dropdown-toggle {
+        color: #efefef;
+    }
+    .card {
+        color: #efefef;
+        background-color: #343a40;
+        border: 1px solid rgba(239, 239, 239, 0.125); //#343a40
+    }
+}
+
 .card {
     margin: 5px;
     max-width: $image-width;
@@ -66,7 +77,7 @@ $image-width: 160px;
 .overlay {
     height: $image-height;
     &:hover {
-        background-color: rgba(0, 0, 0, 0.4);
+        //background-color: rgba(0, 0, 0, 0.4);
         visibility: visible;
 
         .overlay-item {
