--- a/src/app/carousel/carousel-reel/carousel-reel.component.scss
+++ b/src/app/carousel/carousel-reel/carousel-reel.component.scss
@@ -22,7 +22,7 @@
     }
     
 }
-
+// These are needed due to nested css within another component
 ::ng-deep .bg-dark {
     .section-title {
         color: #efefef !important;
