--- a/src/app/nav-header/nav-header.component.scss
+++ b/src/app/nav-header/nav-header.component.scss
@@ -1,13 +1,11 @@
 @import '~bootstrap/scss/mixins/_breakpoints.scss';
 
 $primary-color: white;
-$bg-color: #343a40;
+$bg-color: rgb(22, 27, 34);
 
 .navbar {
     background-color: $bg-color;
 }
-
-
 
 .focus-visible:focus {
     visibility: visible;
