--- a/src/theme/_colors.scss
+++ b/src/theme/_colors.scss
@@ -1,3 +1,8 @@
-$primary-color: #cc7b19;
+$primary-color: #4ac694; //#cc7b19;
 //#secondary-color:;
 $error-color: red;
+
+$theme-colors: (
+  "primary": #4ac694,
+  "danger": #ff4136
+);
