Fixed a bug on the manga reader that caused the background color to inherit from body rather than be forced black. Fixed an issue where a long filename on a phone could make it hard to close menu once open.

--- a/src/app/manga-reader/manga-reader.component.html
+++ b/src/app/manga-reader/manga-reader.component.html
@@ -7,7 +7,7 @@
 
     <div *ngIf="menuOpen" class="overlay" (click)="toggleMenu()">
         <div class="center-menu" (click)="$event.stopPropagation()">
-            <div class="col" *ngIf="mangaFileName !== ''">
+            <div class="col phone-hidden" *ngIf="mangaFileName !== ''">
                 {{ mangaFileName }}
             </div>
             <div class="col">
