Ensure btn-information is properly styled in dark mode

--- a/src/assets/themes/dark.scss
+++ b/src/assets/themes/dark.scss
@@ -18,8 +18,11 @@ $dark-form-readonly: #434648;
   }
 
   a, .btn-link {
-    //color: $dark-link-color;
     color: #4ac694;
+  }
+
+  .btn-information {
+      color: $dark-text-color;
   }
 
   .rating-star, .close, i.fa {
