Implemented a basic search/select typeahead, needs lots of work.

--- a/src/app/_modals/edit-series-modal/edit-series-modal.component.html
+++ b/src/app/_modals/edit-series-modal/edit-series-modal.component.html
@@ -50,7 +50,6 @@
                     </div>
 
                     <div class="row no-gutters">
-                        <!-- TODO: Use Badges like Plex has -->
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="genres">Genres</label>
@@ -60,7 +59,8 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="collections">Collections</label>
-                                <input id="collections" class="form-control" placeholder="Not Implemented" readonly="true" formControlName="collections" type="text">
+                                <!-- <input id="collections" class="form-control" placeholder="Not Implemented" readonly="true" formControlName="collections" type="text"> -->
+                                <app-typeahead (selectedData)="updateCollections($event)" [settings]="settings"></app-typeahead>
                             </div>
                         </div>
                     </div>
