Initial start. Added a typeahead and copying styles and functionality from selectize. Added some api calls.

--- a/src/app/_modals/edit-series-modal/edit-series-modal.component.html
+++ b/src/app/_modals/edit-series-modal/edit-series-modal.component.html
@@ -61,6 +61,7 @@
                                 <label for="collections">Collections</label>
                                 <!-- <input id="collections" class="form-control" placeholder="Not Implemented" readonly="true" formControlName="collections" type="text"> -->
                                 <app-typeahead (selectedData)="updateCollections($event)" [settings]="settings"></app-typeahead>
+                                <!-- <ng-selectize  [formControl]="editSeriesForm.get('collections')" [config]="requiredDropdownConfig" [options]="requiredDropdownOptions"></ng-selectize> -->
                             </div>
                         </div>
                     </div>
