--- a/src/app/shared/tag-badge/tag-badge.component.scss
+++ b/src/app/shared/tag-badge/tag-badge.component.scss
@@ -12,6 +12,7 @@ $bdr-color: #f2f2f2;
     font-size: 14px;
     border: 1px solid $bdr-color;
     display: inline-block;
+    cursor: default;
 
     i {
         color: $primary-color;
