--- a/src/app/_modals/edit-series-modal/edit-series-modal.component.html
+++ b/src/app/_modals/edit-series-modal/edit-series-modal.component.html
@@ -34,7 +34,7 @@
                         </div>
                     </div>
 
-                    <div class="row no-gutters">
+                    <div class="row no-gutters" *ngIf="metadata">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="author">Author</label>
@@ -49,7 +49,7 @@
                         </div>
                     </div>
 
-                    <div class="row no-gutters">
+                    <div class="row no-gutters" *ngIf="metadata">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="genres">Genres</label>
@@ -59,9 +59,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="collections">Collections</label>
-                                <!-- <input id="collections" class="form-control" placeholder="Not Implemented" readonly="true" formControlName="collections" type="text"> -->
-                                <app-typeahead (selectedData)="updateCollections($event)" [settings]="settings"></app-typeahead>
-                                <!-- <ng-selectize  [formControl]="editSeriesForm.get('collections')" [config]="requiredDropdownConfig" [options]="requiredDropdownOptions"></ng-selectize> -->
+                                <app-typeahead (selectedData)="updateCollections($event)" (newItemAdded)="addNewCollectionTag($event)" [settings]="settings"></app-typeahead>
                             </div>
                         </div>
                     </div>
