--- a/src/app/series-detail/series-detail.component.html
+++ b/src/app/series-detail/series-detail.component.html
@@ -39,29 +39,29 @@
                 <app-read-more [text]="seriesSummary" [maxLength]="250"></app-read-more>
             </div>
             <div *ngIf="seriesMetadata">
-                <div class="row no-gutters mt-2" *ngIf="seriesMetadata.genres.length > 0">
-                    <div class="col-md-6">
+                <div class="row no-gutters mt-2" *ngIf="seriesMetadata.genres && seriesMetadata.genres.length > 0">
+                    <div class="col-md-4">
                         <h5>Genres</h5>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <app-tag-badge *ngFor="let genre of seriesMetadata.genres">{{genre}}</app-tag-badge>
                     </div>
                 </div>
-                <div class="row no-gutters mt-1" *ngIf="seriesMetadata.tags.length > 0">
-                    <div class="col-md-6">
+                <div class="row no-gutters mt-1" *ngIf="seriesMetadata.tags && seriesMetadata.tags.length > 0">
+                    <div class="col-md-4">
                         <h5>Collections</h5>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <app-tag-badge *ngFor="let tag of seriesMetadata.tags">
-                            {{tag}}
+                            {{tag.title}}
                         </app-tag-badge>
                     </div>
                 </div>
-                <div class="row no-gutters mt-1"  *ngIf="seriesMetadata.persons.length > 0">
-                    <div class="col-md-6">
+                <div class="row no-gutters mt-1"  *ngIf="seriesMetadata.persons && seriesMetadata.persons.length > 0">
+                    <div class="col-md-4">
                         <h5>People</h5>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <app-person-badge *ngFor="let person of seriesMetadata.persons">
                             <div name>{{person.name}}</div>
                             <div role>{{person.role}}</div>
