--- a/src/app/typeahead/typeahead.component.html
+++ b/src/app/typeahead/typeahead.component.html
@@ -11,28 +11,28 @@
           <!-- TODO: As we type, we need to adjust the width -->
           <input #input type="text" autocomplete="off" tabindex="0" (focus)="setFocus()" (blur)="hasFocus = false" formControlName="typeahead">
         </div>
-        
-  
-        
+      </div>
+      <div class="dropdown" *ngIf="hasFocus">
         <ul class="list-group results">
-            <!-- <li *ngIf="hasFocus && !typeaheadControl.value" class="list-group-item">
-              Type to search
-            </li> -->
-            <li *ngIf="isLoadingOptions">
-              <div class="spinner-border text-secondary" role="status">
-                <span class="invisible">Loading...</span>
-              </div>
-            </li>
-            <li (click)="addNewItem(typeaheadControl.value)" *ngIf="settings.addIfNonExisting && typeaheadControl.value && typeaheadControl.value.length > settings.minCharacters && typeaheadControl.dirty" class="list-group-item">
-              Add {{typeaheadControl.value}}...
-            </li>
-            <li *ngFor="let option of filteredOptions | async" (click)="toggleSelection($event, option)" class="list-group-item">
-              <div class="form-check">
-                  <input id="option-{{1}}" type="checkbox" class="form-check-input">
-                  {{ settings.displayFn(option) }}
-              </div>
-            </li>
-        </ul>
+          <!-- <li *ngIf="hasFocus && !typeaheadControl.value" class="list-group-item">
+            Type to search
+          </li> -->
+          <li *ngIf="isLoadingOptions">
+            <div class="spinner-border text-secondary" role="status">
+              <span class="invisible">Loading...</span>
+            </div>
+          </li>
+          <li (click)="addNewItem(typeaheadControl.value)" *ngIf="settings.addIfNonExisting && typeaheadControl.value && typeaheadControl.value.length > settings.minCharacters && typeaheadControl.dirty" class="list-group-item">
+            Add {{typeaheadControl.value}}...
+          </li>
+          <li *ngFor="let option of filteredOptions | async" (click)="toggleSelection($event, option)" class="list-group-item">
+            <!-- <div class="form-check">
+                <input id="option-{{1}}" type="checkbox" class="form-check-input">
+                {{ settings.displayFn(option) }}
+            </div> -->
+            {{ settings.displayFn(option) }}
+          </li>
+      </ul>
       </div>
 
 
