--- a/src/app/typeahead/typeahead.component.scss
+++ b/src/app/typeahead/typeahead.component.scss
@@ -59,3 +59,21 @@ input {
         padding-right: 9px;
     }
 }
+
+.dropdown {
+    width: 100%;
+    background: white;
+    z-index:1000;
+    margin: 2px 0 0;
+    border-radius: 4px;
+    margin-top: -8px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    //position: absolute;
+    // top: 34px;
+    // width: 100%;
+    // left: 0px;
+    li {
+        list-style: none;
+    }
+}
