Lots of typeahead enhancements. Added some demo code to series-details to make typeahead debugging faster. Added DOMHelper to help with accessibility

--- a/src/app/series-detail/series-detail.component.html
+++ b/src/app/series-detail/series-detail.component.html
@@ -68,6 +68,14 @@
                         </app-person-badge>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="collections">Collections</label>
+                            <app-typeahead [settings]="settings"></app-typeahead>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
