Implemented a re-usable layout component for all card layout screens. Handles pagination.
Converted library-detail page to use it and new collection page.

--- a/src/app/library-detail/library-detail.component.html
+++ b/src/app/library-detail/library-detail.component.html
@@ -1,4 +1,15 @@
-<div class="container-fluid" style="padding-top: 10px">
+<app-card-detail-layout header="{{libraryName}}" 
+    [isLoading]="loadingSeries"
+    [items]="series"
+    [pagination]="pagination"
+    (pageChange)="onPageChange($event)"
+    >
+
+        <ng-template #cardItem let-item let-position="idx">
+            <app-series-card [data]="item" [libraryId]="libraryId" [suppressLibraryLink]="true" (reload)="loadPage()"></app-series-card>
+        </ng-template>
+    </app-card-detail-layout>
+<!-- <div class="container-fluid" style="padding-top: 10px">
     <div class="d-flex justify-content-center" *ngIf="pagination && series.length !== 0">
         <ngb-pagination
             [(page)]="pageNumber"
@@ -30,4 +41,4 @@
     <ng-container *ngIf="series.length === 0 && !loadingSeries">
         There are no Series.
     </ng-container>
-</div>
+</div> -->
