--- a/src/app/shared/card-item/card-item.component.html
+++ b/src/app/shared/card-item/card-item.component.html
@@ -5,7 +5,7 @@
       <div class="progress-banner" *ngIf="read < total && total > 0 && read !== (total -1)">
         <p><ngb-progressbar type="primary" height="5px" [value]="read" [max]="total"></ngb-progressbar></p>
       </div>
-      <div class="error-banner" *ngIf="total === 0">
+      <div class="error-banner" *ngIf="total === 0 && !supressArchiveWarning">
         Cannot Read Archive
       </div>
       
