--- a/src/app/admin/manage-settings/manage-settings.component.html
+++ b/src/app/admin/manage-settings/manage-settings.component.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group">
-            <label for="settings-tasks-backup">Library Backup</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="taskBackupTooltip" role="button" tabindex="0"></i>
+            <label for="settings-tasks-backup">Library Database Backup</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="taskBackupTooltip" role="button" tabindex="0"></i>
             <ng-template #taskBackupTooltip>How often Kavita will backup the database.</ng-template>
             <span class="sr-only" id="settings-tasks-backup-help">How often Kavita will backup the database.</span>
             <select class="form-control" aria-describedby="settings-tasks-backup-help" formControlName="taskBackup" id="settings-tasks-backup">
