Introduced an edit collection tag modal and actionables for collection tags.

--- a/src/app/typeahead/typeahead.component.html
+++ b/src/app/typeahead/typeahead.component.html
@@ -35,6 +35,7 @@
                 <input id="option-{{1}}" type="checkbox" class="form-check-input">
                 {{ settings.displayFn(option) }}
             </div> -->
+            <!-- TODO: Replace this with templateRef -->
             {{ settings.displayFn(option) }}
           </li>
       </ul>
