--- a/src/app/shared/card-item/card-item.component.html
+++ b/src/app/shared/card-item/card-item.component.html
@@ -14,6 +14,9 @@
     <div class="card-body" *ngIf="title.length > 0 || actions.length > 0">
       <div>
         <span class="card-title" placement="top" ngbTooltip="{{title}}" (click)="handleClick()" tabindex="0">
+          <span *ngIf="isPromoted()">
+            <i class="fa fa-angle-double-up" aria-label="promoted"></i>
+          </span>
           {{title}}
         </span>
         <span class="card-actions float-right">
