Edit collection tags modal flesh out. Need to hook up APIs.

--- a/src/app/_modals/edit-collection-tags/edit-collection-tags.component.html
+++ b/src/app/_modals/edit-collection-tags/edit-collection-tags.component.html
@@ -1,1 +1,29 @@
-<p>edit-collection-tags works!</p>
+
+<div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Edit {{tag?.title}} Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="close()">
+    <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+<div class="modal-body">
+    <p>
+        This tag is currently {{tag?.promoted ? 'promoted' : 'not promoted'}} (<i class="fa fa-angle-double-up" aria-hidden="true"></i>). 
+        Promotion means that the tag can be seen server-wide, not just for admin users. All series that have this tag will still have user-access restrictions placed on them.
+    </p>
+    <div class="list-group" *ngIf="!isLoading">
+        <h6>Applies to Series</h6>
+        <li class="list-group-item" *ngFor="let item of series; let i = index">
+            <div class="form-check">
+                <input id="series-{{i}}" type="checkbox" class="form-check-input" 
+                    [ngModel]="selections.isSelected(item)" (change)="selections.toggle(item)">
+                <label attr.for="series-{{i}}" class="form-check-label">{{item.name}}</label>
+            </div>
+        </li>
+    </div>
+
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="close()">Cancel</button>
+    <button type="button" class="btn btn-info" (click)="togglePromotion()">{{tag?.promoted ? 'Demote' : 'Promote'}}</button>
+    <button type="button" class="btn btn-primary" (click)="save()">Save</button>
+</div>
