--- a/src/app/shared/card-item/card-item.component.html
+++ b/src/app/shared/card-item/card-item.component.html
@@ -13,6 +13,7 @@
     </div>
     <div class="card-body" *ngIf="title.length > 0 || actions.length > 0">
       <div>
+        <!-- TODO: Use TemplateRef so we can use custom html for title? -->
         <span class="card-title" placement="top" ngbTooltip="{{title}}" (click)="handleClick()" tabindex="0">
           <span *ngIf="isPromoted()">
             <i class="fa fa-angle-double-up" aria-label="promoted"></i>
