--- a/src/app/_modals/edit-collection-tags/edit-collection-tags.component.html
+++ b/src/app/_modals/edit-collection-tags/edit-collection-tags.component.html
@@ -12,13 +12,27 @@
     </p>
     <div class="list-group" *ngIf="!isLoading">
         <h6>Applies to Series</h6>
+        <div class="form-check">
+            <input id="selectall" type="checkbox" class="form-check-input" 
+                [ngModel]="selectAll" (change)="toggleAll()" [indeterminate]="someSelected">
+            <label for="selectall" class="form-check-label">{{selectAll ? 'Deselect' : 'Select'}} All</label>
+        </div>
         <li class="list-group-item" *ngFor="let item of series; let i = index">
             <div class="form-check">
                 <input id="series-{{i}}" type="checkbox" class="form-check-input" 
-                    [ngModel]="selections.isSelected(item)" (change)="selections.toggle(item)">
+                    [ngModel]="selections.isSelected(item)" (change)="handleSelection(item)">
                 <label attr.for="series-{{i}}" class="form-check-label">{{item.name}}</label>
             </div>
         </li>
+    </div>
+    <div class="d-flex justify-content-center" *ngIf="pagination && series.length !== 0">
+        <ngb-pagination
+            *ngIf="pagination.totalPages > 1"
+            [(page)]="pagination.currentPage"
+            [pageSize]="pagination.itemsPerPage"
+            (pageChange)="onPageChange($event)"
+            [rotate]="false" [ellipses]="false" [boundaryLinks]="true"
+            [collectionSize]="pagination.totalItems"></ngb-pagination>
     </div>
 
 </div>
