--- a/src/app/shared/card-detail-layout/card-detail-layout.component.html
+++ b/src/app/shared/card-detail-layout/card-detail-layout.component.html
@@ -2,6 +2,7 @@
     <h2>{{header}}</h2>
     <div class="d-flex justify-content-center" *ngIf="pagination && items.length !== 0">
         <ngb-pagination
+            *ngIf="pagination.totalPages > 1"
             [(page)]="pagination.currentPage"
             [pageSize]="pagination.itemsPerPage"
             (pageChange)="onPageChange($event)"
@@ -22,6 +23,7 @@
     <!-- TODO: Make this appear only if we have enough scroll-->
     <div class="d-flex justify-content-center" *ngIf="pagination && items.length !== 0">
         <ngb-pagination
+            *ngIf="pagination.totalPages > 1"
             [(page)]="pagination.currentPage"
             [pageSize]="pagination.itemsPerPage"
             (pageChange)="onPageChange($event)"
